# Service_Validation_PhoneNumbers

./: .env.example  .gitignore  Dockerfile.backend  README.md  alembic.ini  docker-compose.yml  mock.json  pyproject.toml  test_mission.md
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/api/routes/: dev_tools.py  metrics.py  webhooks.py
app/core/: config.py  database.py  logging.py
app/domain/: enums.py  models.py  phone_context.py
app/repositories/: lead_repository.py
app/schemas/: metrics.py  webhook.py
app/services/: deterministic_validator.py  ip_geo.py  llm_correction.py  phone_geo.py  phone_pipeline.py
app/utils/: __init__.py  client_ip.py  crm_payload.py  ip_extract.py
frontend/: index.html  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
migrations/: README  env.py
migrations/versions/: 20260323_0001_create_lead_validations.py  20260324_0002_geo_fields_lead_validations.py
nginx/: nginx.conf
scripts/: backend-entrypoint.sh
tests/: conftest.py
tests/integration/: test_webhook.py
tests/unit/: test_crm_payload.py  test_deterministic_validator.py  test_ip_extract.py  test_pipeline.py
